FIX I1 .hidden notification responses were visible because of display: block;

--- a/skins/default/notifications.scss
+++ b/skins/default/notifications.scss
@@ -12,7 +12,7 @@
 		overflow: hidden auto;
 		padding: 0 10px 0 52px;
 
-		> li {
+		> li:not(.hidden) {
 			border-radius: 2px;
 			display: block;
 			line-height: 1.5em;
